<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.user.ResetPasswordFragment">

    <Button
        android:id="@+id/btn_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_no_fill_gradient"
        android:text="@string/send_verification_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_rb_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_rb_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/reg_no_fill_edittext_style"
        android:hint="@string/prompt_email"
        app:boxStrokeColor="#000"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_password"
        app:startIconDrawable="@drawable/ic_person_outline_black_24dp"
        app:startIconTint="#000">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorTransparent"
            android:fontFamily="@font/roboto_medium"
            android:textColor="#000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_rb_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/reg_no_fill_edittext_style"
        android:hint="@string/old_password"
        android:paddingTop="8dp"
        app:boxStrokeWidth="0dp"
        app:errorEnabled="true"
        app:hintTextColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_rb_email"
        app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
        app:startIconTint="#000">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorTransparent"
            android:fontFamily="@font/roboto_medium"
            android:inputType="textPassword"
            android:textColor="#000" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:text="@string/reset_password_description"
        android:textColor="#222"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>